Updated loading screen styling and fixed image not showing

--- a/jquery-bing-translator-plug-in/css/jquery.bing.translator.css
+++ b/jquery-bing-translator-plug-in/css/jquery.bing.translator.css
@@ -120,13 +120,12 @@ text-decoration:none;
 	position:absolute;
 	top:-2px;
 	left:-2px;
+	bottom:-2px;
+	right: -2px;
 	background-color:#FFFFFF;
-	padding:22% 45%;
+	padding:22%;
+	text-align: center;
 }
 .loadingImage > div{
 	font-size:14px;
-}
-.loadingImage > img{
-	width: 100%;
-	height: 100%;
 }
